Hard fixed design spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -228,9 +228,10 @@ input[type=submit]:active {
 
 .project-preview {
     box-sizing: border-box;
-    padding: 0 2ch;
-    max-height: 400px;
     max-width: 100%;
+    height: 20em;
+    padding: 0 2ch;
+    object-fit: contain;
     /* … */
 }
 
@@ -252,19 +253,12 @@ input[type=submit]:active {
 }
 
 .container-column-half {
-    /*max-width: calc(50% - 5px);*/
+    max-width: 60ch;
     /* … */
 }
 
 .container-column-half *:first-child {
     margin-top:0;
-    /* … */
-}
-
-/* Finish fixing or determine too ugly*/
-.container-column-half-full {
-    width: calc(50% - 5px);
-    width: calc(60ch);
     /* … */
 }
 
@@ -358,6 +352,10 @@ nav.top-nav a:visited {
 nav.top-nav a:hover {
     background-color: var(--clr-mask-dk);
     /* … */
+}
+
+*:hover {
+    box-shadow: 0 0 0.3em 0.1em var(--clr-accent);
 }
 
 nav.top-nav a:active {
